src/test/resources/typeSystemTestModels/valid/classes/ClassCanOnlyExtendClass.java
package typeSystemTestModels.valid.classes;

import java.util.ArrayList;

public abstract class ClassCanOnlyExtendClass extends ArrayList {

}
