src/test/resources/typeSystemTestModels/invalid/classes/ClassCanOnlyExtendClass.java
package typeSystemTestModels.invalid.classes;

import java.util.List;
import java.lang.String;

public abstract class ClassCanOnlyExtendClass extends List {

  public abstract String getString();

}